--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,139 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.background{
+background: linear-gradient(to top, rgb(15, 16, 19), #1e2028);
+
+min-height: 220vh;
 }
 
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+--background: 0 0% 100%;
+--foreground: 240 10% 3.9%;
+--card: 0 0% 100%;
+--card-foreground: 240 10% 3.9%;
+--popover: 0 0% 100%;
+--popover-foreground: 240 10% 3.9%;
+--primary: 240 5.9% 10%;
+--primary-foreground: 0 0% 98%;
+--secondary: 240 4.8% 95.9%;
+--secondary-foreground: 240 5.9% 10%;
+--muted: 240 4.8% 95.9%;
+--muted-foreground: 240 3.8% 46.1%;
+--accent: 240 4.8% 95.9%;
+--accent-foreground: 240 5.9% 10%;
+--destructive: 0 84.2% 60.2%;
+--destructive-foreground: 0 0% 98%;
+--border: 240 5.9% 90%;
+--input: 240 5.9% 90%;
+--ring: 240 10% 3.9%;
+--chart-1: 12 76% 61%;
+--chart-2: 173 58% 39%;
+--chart-3: 197 37% 24%;
+--chart-4: 43 74% 66%;
+--chart-5: 27 87% 67%;
+--radius: 0.5rem;
+}
+  .dark {
+--background: 240 10% 3.9%;
+--foreground: 0 0% 98%;
+--card: 240 10% 3.9%;
+--card-foreground: 0 0% 98%;
+--popover: 240 10% 3.9%;
+--popover-foreground: 0 0% 98%;
+--primary: 0 0% 98%;
+--primary-foreground: 240 5.9% 10%;
+--secondary: 240 3.7% 15.9%;
+--secondary-foreground: 0 0% 98%;
+--muted: 240 3.7% 15.9%;
+--muted-foreground: 240 5% 64.9%;
+--accent: 240 3.7% 15.9%;
+--accent-foreground: 0 0% 98%;
+--destructive: 0 62.8% 30.6%;
+--destructive-foreground: 0 0% 98%;
+--border: 240 3.7% 15.9%;
+--input: 240 3.7% 15.9%;
+--ring: 240 4.9% 83.9%;
+--chart-1: 220 70% 50%;
+--chart-2: 160 60% 45%;
+--chart-3: 30 80% 55%;
+--chart-4: 280 65% 60%;
+--chart-5: 340 75% 55%;
+}
+}
+
+@layer base {
+  * {
+    @apply border-border;
+}
+  body {
+    @apply bg-background text-foreground;
+}
+}
+
+@media screen and (max-width: 1600px) {
+  .cover-image{
+   background-size: 500px;
+   background-position-y: -30px !important;
+   min-width: 500px !important;
+   background-repeat: no-repeat;
+   min-height: 660px !important;
+}
+.pattern-image{
+  min-width: 750px !important;
+}
+}
+@media screen and (max-width: 1100px) {
+
+  .cover-text{
+    font-size: 12px;
+  }
+  .cover-image{
+    background-size: 400px;
+    min-width: 400px !important;
+    min-height: 550px !important;
+  }
+  .pattern-image{
+    min-width: 550px !important;
+    min-height: 550px !important;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@media screen and (max-width: 780px) {
+
+  .cover-text{
+    font-size: 10px;
+    letter-spacing: 3px !important;
+  }
+  .cover-image{
+    background-size: 300px;
+    min-width: 300px !important;
+    min-height: 400px !important;
+  }
+  .pattern-image{
+    min-width: 420px !important;
+    background-position-x: -20px !important;
+    background-position-y: -16px !important;
+    min-height: 550px !important;
+  }
+
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@media screen and (max-width: 576px) {
+
+  .cover-image{
+    background-size: 210px;
+    min-width: 180px !important;
+    min-height: 240px !important;
+    background-position-y: -22px !important;
   }
+  .pattern-image{
+    min-width: 420px !important;
+    background-position-x: -25px !important;
+    background-position-y: -16px !important;
+    min-height: 350px !important;
+  }
+
+
 }
