--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,6 +135,37 @@ min-height: 220vh;
     background-position-y: -16px !important;
     min-height: 350px !important;
   }
-
+  .loader{
+    margin-left: 44% !important;
+  }
 
 }
+
+.product-grid{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none; 
+}
+
+.product-grid::-webkit-scrollbar{
+  display: none;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #FFF;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
