--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,6 @@
 .background{
 background: linear-gradient(to top, rgb(15, 16, 19), #1e2028);
 
-min-height: 220vh;
 }
 
 @layer base {
@@ -138,14 +137,23 @@ min-height: 220vh;
   .loader{
     margin-left: 44% !important;
   }
+  .catalogue-grid{
+    grid-template-columns: repeat(auto-fit, minmax(192px, 1fr)) !important;
+  }
 
 }
-
+@media screen and (max-width: 410px) {
+  .catalogue-grid{
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)) !important;
+  }
+}
 .product-grid{
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none; 
 }
-
+.catalogue-card:hover{
+transform: scale(1.02);
+} 
 .product-grid::-webkit-scrollbar{
   display: none;
 }
@@ -169,3 +177,54 @@ min-height: 220vh;
       transform: rotate(360deg);
   }
   } 
+
+  .filterAnimation{
+    animation: filter-ani 600ms;
+   
+  }
+  .filterAnimationReverse{
+    animation: filter-ani-reverse 600ms;
+    height: 30px
+  }
+  @keyframes filter-ani {
+    0%{
+      height: 30px;
+    }
+    100%{
+      height: var(--dynamic-height);
+    }
+  }
+  @keyframes filter-ani-reverse {
+    0%{
+      height: var(--dynamic-height);
+    }
+    100%{
+      height: 30px;
+    }
+  }
+
+  .sortAnimation{
+    animation: sort-ani 600ms;
+   
+  }
+  .sortAnimationReverse{
+    animation: sort-ani-reverse 600ms;
+   
+  }
+  @keyframes sort-ani {
+    0%{
+      height: 0px;
+    }
+    100%{
+      height: var(--dynamic-height-sort);
+    }
+  }
+  @keyframes sort-ani-reverse {
+    0%{
+      height: var(--dynamic-height-sort);
+    }
+    100%{
+      height: 0px;
+    }
+  }
+
