--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,7 +123,13 @@ body, html {
     background-position-y: -16px !important;
     min-height: 550px !important;
   }
-
+  .product-image{
+    width: 500px !important;
+    height: 552px !important;
+  }
+  .image-scroll{
+    width: 410px !important;
+  }
 }
 
 @media screen and (max-width: 576px) {
@@ -146,7 +152,13 @@ body, html {
   .catalogue-grid{
     grid-template-columns: repeat(auto-fit, minmax(192px, 1fr)) !important;
   }
-
+  .product-image{
+    width: 300px !important;
+    height: 331px !important;
+  }
+  .image-scroll{
+    width: 230px !important;
+  }
 }
 @media screen and (max-width: 410px) {
   .catalogue-grid{
@@ -265,3 +277,22 @@ transform: scale(1.02);
   .star-rating svg{
     display: inline;
   }
+
+  .image-scroll::-webkit-scrollbar {
+    height: 6px; 
+    position: relative;
+}
+
+.image-scroll::-webkit-scrollbar-thumb {
+    background-color: rgb(7 11 26);
+    border-radius: 4px; 
+   
+}
+
+.image-scroll::-webkit-scrollbar-track {
+    background-color: #1e2028; 
+    border-radius: 10px;
+}
+.image-scroll{
+  padding-bottom: 10px;
+}
